# smart-farm-wiki

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  index.md  quickstart.md
docs/conventions/: citations.md  frontmatter.md  linking.md  page-schema.md
docs/operations/: agent-maintenance.md  obsidian.md  publishing.md  raw-corpus-and-publishing.md  validation.md
docs/workflows/: ingest.md  lint.md  query.md
examples/: README.md
examples/wiki/: mini-concept.md
raw/: README.md
scripts/: __init__.py  append_log.py  bootstrap.py  mkdocs_neutralize_raw_links.py  pdf_to_markdown.py  rebuild_index.py  scaffold_page.py  validate_raw_pdf_links.py  validate_wiki.py  wiki_common.py
templates/: analysis-page.md  comparison-page.md  concept-page.md  entity-page.md  glossary-page.md  ingest-checklist.md  lint-checklist.md  overview-page.md  parcel-intelligence-sheet.md  source-note.md  timeline-page.md
tests/: conftest.py  test_index_consistency.py  test_log_format.py  test_pdf_to_markdown.py  test_template_integrity.py  test_validate_raw_pdf_links.py  test_validate_wiki.py
wiki/: index.md  log.md  overview.md
wiki/analyses/: 3d-printing-in-a-workshop-summary.md  agentic-wiki-improvement-prompts-strategic-audit.md  agricultural-labor-workers-comp-employment-baseline-tennessee.md  agritourism-dual-site-business-plan-five-and-120-acres.md  domain-content-overview.md  (+177 more)
(+486 files in other folders)
